crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_simple.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema Login {\n    email: String, min(1)\n}\n"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 13,
            },
        },
        value: "Login",
    },
    from: None,
    items: [
        Field {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 10,
                    },
                },
                value: "email",
            },
            typ: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 12,
                        },
                        end: Position {
                            line: 2,
                            column: 18,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 18,
                                        },
                                    },
                                    value: "String",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
            rules: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 20,
                            },
                            end: Position {
                                line: 2,
                                column: 23,
                            },
                        },
                        value: "min",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 24,
                                },
                                end: Position {
                                    line: 2,
                                    column: 25,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 1.0,
                                    text: "1",
                                },
                            ),
                        },
                    ],
                },
            ],
        },
    ],
}
