crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_type_var_is_rule.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { a: t }"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: "S",
    },
    from: None,
    items: [
        Field {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: "a",
            },
            typ: None,
            rules: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: "t",
                    },
                    args: [],
                },
            ],
        },
    ],
}
